<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="hello">Hello World, WelcomeActivity!</string>
    <string name="app_name">PocketBib</string>
    <string name="error_unknown">An error has occurred. Please contact an administrator.</string>
    <string name="error_server_not_available">The server is not available.</string>
    <string name="error_no_rights">You have no authorization for the action.</string>
    <string name="error_server_problem">A server error has occurred. Please contact an administrator.</string>
    <string name="error_login_failed">Login failed. Wrong e-mail-address or password</string>
    <string name="error_item_already_lent">Error! No available copies at the moment.</string>
    <string name="error_account_deactivated">Your account is deactivated. Please contact an administrator.</string>
    <string name="cancel">Cancel</string>
    <string name="label_continue">Continue</string>
    <string name="dialog_title_error">Error!</string>
    <string name="optional">(optional)</string>
    <string name="delete">Delete</string>
    <string name="reload_finished">Reload is finished.</string>
    <string name="saving">Saving…</string>
    <string name="loading">Loading…</string>
    <string-array name="error_smilies">
        <item>:(</item>
        <item>:\'(</item>
        <item>=O</item>
        <item>>:(</item>
        <item>-.-</item>
    </string-array>
    <string name="email_subject_item_return_request">%3$s %4$s requested the return of &#8216;%5$s&#8217;</string>
    <string name="email_message_item_return_request">Hi %1$s %2$s,\n
I would like to read %5$s but there are no available copies left in the library. Could you return the item,if you don\'t need it at the moment?\n

Thank you for your time.\n
%3$s %4$s</string>
    <string name="empty"></string>
    <string name="error_dialog_heading">Oops!</string>
    <string name="label_information_room_number">room number</string>
    <string name="label_information_building_number">building number</string>
    <string name="label_information_telephone_number">telephone number</string>
    <string name="label_information_note">Comment</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sort">Sort results</string>
    <string name="menu_search_simple">Simple search</string>
    <string name="menu_search_extended">Extended search</string>
    <string name="menu_search_scan_barcode">Scan Barcode</string>
    <string name="menu_search_voice">Speech input</string>
    <string name="menu_administration">Administration</string>
    <string name="menu_my_account">@string/title_my_account</string>
    <string name="dialog_title_logout">Logout</string>
    <string name="dialog_message_logout">You will be logged out.</string>
    <string name="dialog_action_logout">Logout</string>
    <string name="message_user_invalid">Your account is deactivated. You were automatically logged out.</string>
    <string name="error_user_not_active">Your account is deactivated. Please contact an administrator.</string>
    <string name="menu_forgot_password">Forgot your password?</string>
    <string name="menu_register">Register</string>
    <string name="menu_options">@string/title_preferences</string>
    <string name="menu_start_extended_search">Search</string>
    <string name="menu_modify_item">Manage item</string>
    <string name="menu_search_barcode">Barcode scanning</string>
    <string name="menu_discard">Discard Changes</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_sort_short">Sort</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_sort_by_relevance">Sort by relevance</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="menu_sort_by_title">Sort by title</string>
    <string name="menu_sort_by_date">Sort by release date </string>
    <string name="menu_sort_by_rating">Sort by rating</string>
    <string name="menu_add">Add</string>
    <string name="menu_sort_a_to_z">A - Z</string>
    <string name="menu_sort_z_to_a">Z - A</string>
    <string name="menu_sort_asc">Ascending </string>
    <string name="menu_sort_desc">Descending</string>
    <string name="menu_sort_new_to_old">New - Old</string>
    <string name="menu_sort_old_to_new">old - New</string>
    <string name="menu_sort_rating_desc">Good rated on top</string>
    <string name="menu_sort_rating_asc">Bad rated on top</string>
    <string name="label_login_message">Please enter your e-mail-address and password to login.</string>
    <string name="hint_email">e- mail-address</string>
    <string name="hint_password">Password</string>
    <string name="label_save_password">Keep me logged in</string>
    <string name="label_login">Login</string>
    <string name="title_login">Login</string>
    <string name="dialog_title_register">Registration</string>
    <string name="dialog_message_register">Please contact an administrator to register.</string>
    <string name="dialog_title_forgot_password">Forgot your password?</string>
    <string name="dialog_message_forgot_password">Please contact an administrator to change your password.</string>
    <string name="label_login_in_progress">Login…</string>
    <string name="dialog_title_no_user_account">No user account?</string>
    <string name="dialog_message_no_user_account">Click on "Registration" to create an user account.</string>
    <string name="dialog_action_no_user_account_yes">Registration</string>
    <string name="dialog_action_no_user_account_no">Cancel</string>
    <string name="dialog_title_enter_password">Enter password</string>
    <string name="dialog_message_enter_password">Please enter your password to sign in</string>
    <string name="dialog_action_enter_password_forgot">Forgot your password?</string>
    <string name="title_extended_search">Extended search</string>
    <string name="label_search_type">Search for</string>
    <string name="label_search_type_books">Books</string>
    <string name="label_search_type_magazines">Magazine</string>
    <string name="label_search_type_other">Other</string>
    <string-array name="label_form_item_types">
        <item>@string/label_search_type_books</item>
        <item>@string/label_search_type_magazines</item>
        <item>@string/label_search_type_other</item>
    </string-array>
    <string name="label_form_title">Title</string>
    <string name="label_form_description">Description</string>
    <string name="label_form_author">Author</string>
    <string name="label_form_publisher">Publisher</string>
    <string name="label_form_year">Publication year</string>
    <string name="label_form_isbn">ISBN</string>
    <string name="label_form_issn">ISSN</string>
    <string name="label_form_availability">Availability </string>
    <string-array name="label_search_options">
        <item>@string/label_search_option_contains</item>
        <item>@string/label_search_option_equals</item>
    </string-array>
    <string name="label_search_option_contains">contains</string>
    <string name="label_search_option_equals">equals</string>
    <string-array name="label_search_availability_options">
        <item>Does not matter</item>
        <item>Available</item>
        <item>Not available</item>
    </string-array>
    <string name="title_item_detail">Details</string>
    <string name="borrow_item">Borrow</string>
    <string name="return_item">Return</string>
    <string name="not_available">Not available</string>
    <string name="contact_user">Contact a user</string>
    <string name="buy">Buy</string>
    <string name="all_ratings">Display all comments.</string>
    <string name="cover_image_description">Cover image</string>
    <string name="bibtex_share_title">Share BibTex with…</string>
    <string name="dialog_not_logged_in_title">Not logged in</string>
    <string name="dialog_action_login">Login</string>
    <string name="item_information">Information</string>
    <string name="item_actions">Actions</string>
    <string name="export_as_bibtex">Export as BibTeX.</string>
    <string name="borrow_success">Borrowed successfully.</string>
    <string name="return_success">Returned successfully.</string>
    <string name="item_availableCopies">Copies</string>
    <string name="item_description">Description</string>
    <string name="item_edition">Edition</string>
    <string name="item_pageCount">Page count</string>
    <string name="item_position">Position</string>
    <string name="item_publicationYear">Publication Year </string>
    <string name="item_publisher">Publisher</string>
    <string name="item_title">Title</string>
    <string name="item_author">Author</string>
    <string name="item_isbn">ISBN</string>
    <string name="item_issn">ISSN</string>
    <string name="item_price">Buy at amazon.com</string>
    <string name="item_publicationDate">Publication Date</string>
    <string name="thumbnail_image_description">Thumbnail Image </string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_email">E-Mail-Address</string>
    <string name="user_password">Password</string>
    <string name="user_telephone">Telephone number</string>
    <string name="user_description">Description</string>
    <string name="title_search_results">Search</string>
    <string name="no_entries">No search results were found.</string>
    <string name="own_rating">My rating</string>
    <string name="no_ratings">There are no other comments.</string>
    <string name="total_ratings">Other ratings (%1$s total)</string>
    <string name="no_own_rating">Click to add your rating.</string>
    <string name="label_form_email">E-Mail-Address:</string>
    <string name="label_form_password">Password:</string>
    <string name="button_change_password">Change</string>
    <string name="label_password_automatically_generated">(automatically generated)</string>
    <string name="label_form_name">Name:</string>
    <string name="label_hint_first_name">First name</string>
    <string name="label_hint_last_name">Last name</string>
    <string name="label_form_admin">Administrator</string>
    <string name="label_form_active">Active</string>
    <string name="label_switch_active">Activate user account</string>
    <string name="label_switch_admin">Administrator account</string>
    <string name="label_form_id">User-ID</string>
    <string name="label_no_id">(Created by saving)</string>
    <string name="button_show_lent_items">Show</string>
    <string name="label_form_lent_items">Borrowed items:</string>
    <string name="login_button">Login</string>
    <string name="label_welcome_guest">You are not logged in.</string>
    <string name="label_welcome_help_search">To search click the magnifier.</string>
    <string name="label_welcome_help_login">You have to login to use all features.</string>
    <string name="preferences_host">Host address</string>
    <string name="preferences_port">Port number</string>
    <string name="preferences_cache_settings">Cache settings</string>
    <string name="preferences_host_message">Enter the host address here.</string>
    <string name="preferences_port_message">Enter the port number here.</string>
    <string name="preferences_ssl_on">Connecting via HTTPS</string>
    <string name="preferences_ssl_off">Connecting via HTTP</string>
    <string name="preferences_ssl_title">Secure connection</string>
    <string name="preferences_cache_quality_default_value">100</string>
    <string name="preferences_cache_quality">Cache quality</string>
    <string name="title_server_preferences">Connection</string>
    <string name="default_lent_items">0</string>
</resources>