<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="50"
        android:showAsAction="always"
        android:title="@string/menu_search"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/item_search_text"
                android:icon="@drawable/ic_action_search_text"
                android:orderInCategory="1"
                android:title="@string/menu_search_simple"/>
            <item
                android:id="@+id/item_search_extended"
                android:icon="@drawable/ic_action_search_extended"
                android:orderInCategory="4"
                android:title="@string/menu_search_extended"/>
            <item
                android:id="@+id/item_search_scan_barcode"
                android:icon="@drawable/ic_action_search_scan_barcode"
                android:orderInCategory="2"
                android:title="@string/menu_search_scan_barcode"/>
            <item
                android:id="@+id/item_search_voice"
                android:icon="@drawable/ic_action_search_voice"
                android:orderInCategory="3"
                android:title="@string/menu_search_voice"/>
        </menu>
    </item>
    <item
        android:id="@+id/item_administration"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_administration"
        android:visible="false"/>
    <item
        android:id="@+id/item_my_account"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_my_account"
        android:visible="false"/>
    <item
        android:id="@+id/item_options"
        android:orderInCategory="210"
        android:showAsAction="never"
        android:title="@string/menu_options"
        android:visible="false"/>
    <item
        android:id="@+id/item_help"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_help"
        android:visible="true"/>
    <item
        android:id="@+id/item_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_login"
        android:visible="false"/>
    <item
        android:id="@+id/item_logout"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/menu_logout"
        android:visible="false"/>

</menu>