<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            style="@style/TextSearchLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_form_email" />

        <include layout="@layout/divider" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/TextSearchLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_form_password" />

        <include layout="@layout/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:inputType="none"
                android:onClick="onChangePasswordClick"
                android:text="@string/label_password_automatically_generated" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onChangePasswordClick"
                android:text="@string/button_change_password" />
        </LinearLayout>

        <TextView
            style="@style/TextSearchLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_form_name" />

        <include layout="@layout/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/label_hint_first_name"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/input_last_name"
                android:nextFocusRight="@+id/input_last_name" />

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/label_hint_last_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/TextSearchLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_form_active" />

            <include layout="@layout/divider" />

            <include
                android:id="@+id/switch_active"
                layout="@layout/include_switch"
                android:text="@string/label_switch_active" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/TextSearchLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_form_admin" />

            <include layout="@layout/divider" />

            <include
                android:id="@+id/switch_admin"
                layout="@layout/include_switch"
                android:text="@string/label_switch_admin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_additional_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/TextSearchLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_form_id" />

            <include layout="@layout/divider" />

            <TextView
                android:id="@+id/label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/label_no_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_lent_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/TextSearchLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_form_lent_items" />

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label_lent_items"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/default_lent_items"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/button_show_lent_items"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_show_lent_items"
                    android:onClick="showLentItems" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>